--- a/index.css
+++ b/index.css
@@ -2,7 +2,39 @@ body {
   background-color: rgb(121, 241, 137);
 }
 
-.box {
-  border: 2px solid silver;
+.box1 {
+  border: 2px solid rgb(0, 0, 0);
   background-color: lavender;
+  width: 500px;
+  height: 100px;
+  text-align: center;
 }
+
+.box2 {
+  border: 2px solid rgb(0, 0, 0);
+  background-color: lavender;
+  width: 500px;
+  height: 600px;
+  text-align: center;
+  margin-top: 10;
+
+}
+
+.box3 {
+  border: 2px solid rgb(0, 0, 0);
+  background-color: rgb(216, 216, 216);
+  width: 500px;
+  height: 100px;
+  text-align: left;
+  margin-top: 10;
+}
+
+.box4 {
+  border: 2px solid rgb(0, 0, 0);
+  background-color: rgb(231, 255, 144);
+  width: 50px;
+  height: 50px;
+  text-align: center;
+  margin-top: 5;
+}
+
