--- a/src/App.css
+++ b/src/App.css
@@ -6,13 +6,24 @@
 }
 
 .userlist {
+  background-color: #2e2d2d;
+  width: 100%;
+  height: 5%;
+  margin: auto;
 
 }
 
 .chat {
+  background-color: #c7c7c7;
+  width: 100%;
+  height: 90%;
+  margin: auto;
 
 }
 
 .inputbox {
-  
+  background-color: #818181;
+  width: 100%;
+  height: 5%;
+  margin: auto;
 }
